Fix alignment of buttons in header

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ ul {
     display: flex;
     gap: 10px;
     align-items: center;
-    justify-content: space-between;
+    justify-content: end;
     padding: 0;
 
     & button {
